--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <h1 class="give-me">
-            Thumbtack Caffeine Machine.
+            Thumbtack Caffeine Machine..
         </h1>
         <h2 class="result">
             Spin the caffeine machine!
@@ -22,16 +22,10 @@
         <div class="slots-container">
         	<div class="slots">
         		<div class="slot-col slot1">
-                    <!-- <div class="border upper-border"></div>
-                    <div class="border lower-border"></div> -->
         		</div>
         		<div class="slot-col slot2">
-                    <!-- <div class="border upper-border"></div>
-                    <div class="border lower-border"></div> -->
         		</div>
         		<div class="slot-col slot3">
-                    <!-- <div class="border upper-border"></div>
-                    <div class="border lower-border"></div> -->
         		</div>
         	</div>
         	<button class="start-slot">Caffeine Me!</button>
